# pycombina

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  README.rst  ThirdPartyNotices.txt  bnb_jung.cpp  bnbjung.cpp  cia.cpp  cia_bnb.cpp  pyproject.toml  setup.py  test_bnb_jung.py  test_cia.py  test_cia_bnb.py
.github/workflows/: main.yml  wheels.yml
benchmark/: benchmark_1.py  scip_benchmark_1.py
benchmark/util/: __init__.py  logproc.py
bnb_jung/: bnb_jung.pyx  profile.ipynb  setup.py
doc/: Makefile
doc/source/: combina.rst  conf.py  index.rst  install.rst  pycombina_sample_application.ipynb  rounding.rst  sample_data.csv  samples.rst
docs/: requirements.txt
docs/source/: binapprox.rst  combina.rst  conf.py  index.rst  install.rst  pycombina_sample_application.ipynb  pycombina_webserver_application.ipynb  pycombina_webservice_application.ipynb  rounding.rst  sample_data_2.csv
examples/: combina_example_1.py  egerstedt_nt_8400_40.csv  example_1.py  lotka_volterra_multimode.py  massif.out  memory_profile.py  mmlotka_nt_12000_400.csv  rounding_example_1.py  server_example_1.py  webservice_example.py
examples/data/: mmdoubletank_nt_8400_60.csv  mmlotka_nt_12000_400.csv
previous_approaches/python_bnb_jung/: bnb_jung.html  setup.py
previous_approaches/swig_wrap/: bnbjung.cpp  bnbjung.h
pycombina/: BnBNode.cpp  BnBNode.hpp  BnBNode.hpp.gch  BnBNodeComparison.cpp  CIA.cpp  CIA.hpp  Makefile  __init__.py  _binary_approximation.py  _cia_gurobi.py  _cia_milp.py  _cia_scip.py  _combina.py  _combina_bnb.py  _combina_gurobi_solver.py  _combina_milp.py  _combina_milp_solver.py  _combina_rounding.py  _combina_rounding_solver.py  _combina_scip_solver.py  _combina_sur.py  _combina_sur_solver.py  _rounding.py  _rounding_solver.py  _rounding_sur_solver.py  _server.py  cia.cpp  cia.hpp  combina.py  pycombina.cpp
pycombina/src/: BnBNode.cpp  BnBNode.hpp  BnBNodeComparison.cpp  BnBNodeComparison.hpp  CIA.cpp  CIA.hpp  CombinaBnBSolver.cpp  cia.cpp
python_bnb_jung/: bnb_jung.pyx
server/: server.py
src/combina_bnb_solver/: BnBNode.cpp  BnBNode.hpp  BnBNodeComparison.cpp  BnBNodeComparison.hpp  CombinaBnBSolver.cpp  CombinaBnBSolver.hpp  Monitor.cpp  Monitor.hpp  Node.cpp  Node.hpp  NodeComparison.cpp  NodeComparison.hpp  NodeQueue.cpp  NodeQueue.hpp  PythonBindings.cpp  Timer.hpp  combina_fwd.hpp  config.hpp.in
src/combina_bnb_solver/monitors/: VbcMonitor.cpp  VbcMonitor.hpp
src/combina_bnb_solver/queues/: BestFirstNodeQueue.cpp  BestFirstNodeQueue.hpp  BestThenDiveNodeQueue.cpp  BestThenDiveNodeQueue.hpp  DepthFirstNodeQueue.cpp  DepthFirstNodeQueue.hpp  DynamicBacktrackingNodeQueue.cpp  DynamicBacktrackingNodeQueue.hpp
src/pycombina/: __init__.py  _combina_bnb.py
test/: bnb_test.py  combina_test.py  input_test.py  rounding_test.py
